Add orderStatus functionality
