# src/myApi.ts
@@ -16,6 +16,7 @@ export type OrderDtos = {
   dateCreated: string;
   /** @example "Harry" */
   customerName: string;
+  orderStatus: 'notCalculated' | 'calculated';
   products: {
     /** @example "Haywire Blend" */
     productName: string;
@@ -41,6 +42,12 @@ export interface OrderDto {
   dateCreated: string;
   /** @example "Harry" */
   customerName: string;
+  orderStatus: {
+    /** @example "string" */
+    type?: string;
+    /** @example ["notCalculated","calculated"] */
+    enum?: string[];
+  };
   products: {
     /** @example "Haywire Blend" */
     productName: string;
@@ -146,6 +153,10 @@ export interface ProductExtendedJsonSchema {
   amountOrdered: number;
   /** @example true */
   hasRecipe: boolean;
+}
+
+export interface OrderStatusEnum {
+  orderStatus: 'notCalculated' | 'calculated';
 }
 
 import type {
